@@ -75,7 +75,9 @@ void ControlMissile(short fxNumber)
 		else if (fx.objectNumber == ID_PROJ_BOMB)
 		{
 			SoundEffect(SFX_TR1_ATLANTEAN_EXPLODE, &fx.pos, soundFXType);
-			TriggerExplosionSparks(fx.pos.Position.x, fx.pos.Position.y, fx.pos.Position.z, 0, false, isUnderwater, fx.roomNumber);
+			TriggerExplosionSparks(fx.pos.Position.x, fx.pos.Position.y, fx.pos.Position.z, 3, -2, 0, fx.roomNumber);
+			TriggerExplosionSparks(fx.pos.Position.x, fx.pos.Position.y, fx.pos.Position.z, 3, -1, 0, fx.roomNumber);
+			TriggerShockwave(&fx.pos, 48, 304, (GetRandomControl() & 0x1F) + 112, 128, 32, 32, 32, EulerAngles(2048, 0.0f, 0.0f), 0, true, false, (int)ShockwaveStyle::Normal);
 		}
 
 		if (hasHitPlayer)
@@ -83,24 +85,20 @@ void ControlMissile(short fxNumber)
 			if (fx.objectNumber == ID_KNIFETHROWER_KNIFE)
 			{
 				DoDamage(LaraItem, KNIFE_DAMAGE);
-				KillEffect(fxNumber);
 			}
 			else if (fx.objectNumber == ID_SCUBA_HARPOON)
 			{
 				DoDamage(LaraItem, DIVER_HARPOON_DAMAGE);
-				KillEffect(fxNumber);
 			}
 			else if (fx.objectNumber == ID_PROJ_BOMB)
 			{
 				DoDamage(LaraItem, MUTANT_BOMB_DAMAGE);
-				KillEffect(fxNumber);
 			}
 			else if (fx.objectNumber == ID_PROJ_SHARD)
 			{
 				TriggerBlood(fx.pos.Position.x, fx.pos.Position.y, fx.pos.Position.z, 0, 10);
 				SoundEffect(SFX_TR4_BLOOD_LOOP, &fx.pos, soundFXType);
 				DoDamage(LaraItem, MUTANT_SHARD_DAMAGE);
-				KillEffect(fxNumber);
 			}
 
 			LaraItem->HitStatus = true;
@@ -109,6 +107,8 @@ void ControlMissile(short fxNumber)
 			fx.frameNumber = 0;
 			fx.counter = 0;
 		}
+
+		KillEffect(fxNumber);
 	}
 
 	if (pointColl.RoomNumber != fx.roomNumber)
